...
        let appDelegate = UIApplication.shared.delegate as! AppDelegate
        let user = appDelegate.user
        let result = user.logOut()
        
        //Present the error if the logOut function returned false, using the string portion of the tuple as the message.
        if(!result.0){
            let alertController = UIAlertController(title: "Error", message: result.1, preferredStyle: UIAlertControllerStyle.alert)
            alertController.addAction(UIAlertAction(title: "Ok", style: UIAlertActionStyle.default, handler: nil))
            self.present(alertController, animated:true, completion:nil)
        }
        else{
            let removeSuccessful: Bool = KeychainWrapper.standard.removeAllKeys()
            if(removeSuccessful == false){
...
    // the correct title depending on user login status.
    override func viewWillAppear(_ animated: Bool){
        super.viewWillAppear(animated)
        let appDelegate = UIApplication.shared.delegate as! AppDelegate
        let user = appDelegate.user
        if user.loggedIn(){
            logButton.setTitle("Log Out", for: UIControlState.normal)
            acctMod.setTitle("Edit Account", for: UIControlState.normal)
        }
        else{
            logButton.setTitle("Log In", for: UIControlState.normal)
            acctMod.setTitle("Create Account", for: UIControlState.normal)
        }
...
